--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/nyu-csci-ua-0467-001-fall-2021/hasin-shabbir-final-project/issues"
   },
-  "homepage": "https://github.com/nyu-csci-ua-0467-001-fall-2021/hasin-shabbir-final-project#readme"
+  "homepage": "https://github.com/nyu-csci-ua-0467-001-fall-2021/hasin-shabbir-final-project#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12",
+    "path": "^0.12.7"
+  }
 }
