--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "NYUAD Course Review Website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^6.0.12",
     "path": "^0.12.7"
   }
