--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/app.js --ignore client"
+    "start": "nodemon server/app.js",
+    "build": "cd client && npm install && npm run build"
+  },
+  "engines": {
+    "node": "14.17.5"
   },
   "repository": {
     "type": "git",
