--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14",
     "path": "^0.12.7"
   }
 }
