--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-router-dom": "^6.0.2"
   }
 }
